--- a/team- to l4zy f0r 4 nam3/css/style.css
+++ b/team- to l4zy f0r 4 nam3/css/style.css
@@ -58,7 +58,7 @@ font-size:14px;
 
 /* =============================== header ===================================== */
 .header{
-background: url(../img/bghead.jpg) no-repeat center fixed;
+background: url(../img/rick-astley.jpg) no-repeat center fixed;
     -webkit-background-size: cover;
 -moz-background-size: cover;
 -o-background-size: cover;
